k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployguard-service
spec:
  type: NodePort
  selector:
    app: deployguard
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007
