k8s/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-deployguard
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: deployguard
    ports:
      - protocol: TCP
        port: 5432
